# Connect4_SFML

./: .gitignore  CMakeLists.txt  Constants.hpp  Jeu.cpp  Jeu.hpp  Makefile  README.md  build.sh  build_test.sh  main.cpp  pop.cpp
include/: Connect4.hpp  Connect4_SFML.hpp
src/: CMakeLists.txt  Connect4.cpp  Connect4_SFML.cpp  Game_CLI.cpp  Game_SFML.cpp  Jeu.cpp  main.cpp  pop.cpp
test/: CMakeLists.txt  Connect4Test.cpp
